k8s/deployment-user-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-ms
  template:
    metadata:
      labels:
        app: user-ms
    spec:
      containers:
        - name: user-ms
          image: ksericpro/user-ms:1.0.0
          ports:
          - containerPort: 8000
            protocol: TCP
      restartPolicy: Always
      #  resources:
      #limits:
      #  memory: 512Mi
      #  cpu: "1"
      #requests:
      #  memory: 256Mi
      #  cpu: "0.2"
