k8s/service-user-ms.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: user-ms-kubernetes-service
spec:
  selector:
    app: user-ms
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
